--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,34 +1,56 @@
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-        data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" routerLink="">GitHub Stuff</a>
-    </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li routerLinkActive="active current"><a routerLink="/followers">Followers</a></li>
-        <li routerLinkActive="active current"><a routerLink="/posts">Posts</a></li>
-      </ul>
-
-
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">{{userName}}</a></li>
-        <li>
-          <button type="button" class="btn btn-default navbar-btn" *ngIf="!isAuthenticated" (click)="login()">Sign
-            In</button>
-          <button type="button" class="btn btn-default navbar-btn" *ngIf="isAuthenticated"
-            (click)="logout()">Sign Out</button>
-        </li>
-      </ul>
-    </div>
-  </div><!-- /.container-fluid -->
+<nav id="mainNavbar" class="navbar navbar-expand-lg navbar-dark bg-dark ">
+  <a class="navbar-brand" href="#">PostCodes</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
+    (click)="isMenuCollapsed = !isMenuCollapsed">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div id="navbarSupportedContent" [ngbCollapse]="isMenuCollapsed" class="collapse navbar-collapse">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/followers" routerLinkActive="active-link">Followers</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/posts" routerLinkActive="active-link">Posts</a>
+      </li>
+    </ul>
+    <!-- <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+    </form> -->
+    <ul class="nav navbar-nav navbar-right">
+      <li class="nav-item"><a class="nav-link" href="#">{{userName}}</a></li>
+      <li>
+        <button type="button" class="btn btn-dark" *ngIf="!isAuthenticated" (click)="login()">Sign
+          In</button>
+        <button type="button" class="btn btn-dark" *ngIf="isAuthenticated" (click)="logout()">Sign Out</button>
+      </li>
+    </ul>
+  </div>
 </nav>
+
+<!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" href="#">PostCode Lookup</a>
+  
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" routerLink="/followers">Followers</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/posts">Posts</a>
+      </li>
+    </ul>
+    <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+    </form>
+    <ul class="nav navbar-nav navbar-right">
+      <li class="nav-item"><a class="nav-link" href="#">{{userName}}</a></li>
+      <li>
+        <button type="button" class="btn btn-dark" *ngIf="!isAuthenticated" (click)="login()">Sign
+          In</button>
+        <button type="button" class="btn btn-dark" *ngIf="isAuthenticated"
+          (click)="logout()">Sign Out</button>
+      </li>
+    </ul>
+  </div>
+</nav> -->
