--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,8 +1,8 @@
 <nav id="mainNavbar" class="navbar navbar-expand-lg navbar-dark bg-dark ">
-  <a class="navbar-brand" href="#">PostCodes</a>
+  <a class="navbar-brand" routerLink="/home">PostCodes</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
-    (click)="isMenuCollapsed = !isMenuCollapsed">
+    (click)="toggleButton()">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div id="navbarSupportedContent" [ngbCollapse]="isMenuCollapsed" class="collapse navbar-collapse">
@@ -20,9 +20,8 @@
     <ul class="nav navbar-nav navbar-right">
       <li class="nav-item"><a class="nav-link" href="#">{{userName}}</a></li>
       <li>
-        <button type="button" class="btn btn-dark" *ngIf="!isAuthenticated" (click)="login()">Sign
-          In</button>
-        <button type="button" class="btn btn-dark" *ngIf="isAuthenticated" (click)="logout()">Sign Out</button>
+        <a class="nav-link"  *ngIf="!isAuthenticated" routerLink="/home">Sign In</a>
+        <a class="nav-link" *ngIf="isAuthenticated" (click)="logout()">Sign Out</a>
       </li>
     </ul>
   </div>
